--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   },
   "homepage": "https://github.com/haryphamhust/quickStartNodeJSProject#readme",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^6.3.4",
+    "react-bootstrap": "^2.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3",
